-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0 Beta3
-
None
-
-
6d1634874 (dev), 8efc24108 (6.10)
-
Multimedia Current w28 ...
The `QASSERT(it != m_rtVoiceRegistry.end())` can be triggered in `QRtAudioEngine::runRtCommand` with enough sound effects. For example modifying the dice example to utilize `SoundEffect` elements causes this on Android, and modifying the sounds to be stereo files instead of mono extends this to trigger on PulseAudio.
- relates to
-
QTBUG-141097 [Android] [6.10] SIGSEGV at QtMultimediaPrivate::QRtAudioEngine::runRtCommands()
-
- Reported
-